2001-08-28  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Moved "AM_PROG_XML_I18N_TOOLS" after AC_INIT.

2001-08-26  JP Rosevear  <jpr@ximian.com>

	* scintilla-control/scintilla-ui.xml: update place holder name to
	match gtkhtml (which we will guess in the standard

2001-08-08  Jens Finke <jens@gnome.org>

	* Makefile.am (EXTRA_DIST): Added *.spec[.in] and xml-i18n-*.in
	files.

	* configure.in: Added *_REQUIRED variables and appropriate
	AC_SUBST calls, use *_REQUIRED vars in CHECK_LIB macro, generate
	gdl.spec.

	* scintilla-control/Makefile.am: Removed duplicated EXTRA_DIST.
	
	* gdl.spec.in: New file.

2001-07-20  Dave Camp  <dave@ximian.com>

        * Applied a patch from Gustavo M. Giraldez <gustavo.giraldez@gmx.net>
	to implement "Search" and "Search and Replace" verbs.

2001-07-09  Christopher R. Gabriel  <cgabriel@cgabriel.org>

	* configure.in (ALL_LINGUAS): Added italian translation.

2001-07-07  Dave Camp  <dave@ximian.com>

	* configure.in: Include a renamed copy of GDL_CHECK_LIB here, and
	use that instead.
	
2001-07-07  Dave Camp  <dave@ximian.com>

	* scintilla-control/test.c: Changed to reflect idl changes.

	* scintilla-control/scintilla-persist-stream.c (impl_load): Removed
	the unused data variable.

	* scintilla-control/scintilla-editor-gutter.c: Replaced
	scintilla_editor_gutter_get_type with a BONOBO_X_TYPE_FUNC_FULL 
	macro.

	* scintilla-control/scintilla-editor-buffer.c: Changed to reflect
	idl changes, and BonoboXObjectified.

	* scintilla-control/scintilla-control.c: Replaced
	init_scintilla_control_factory() and main() with
	BONOBO_OAF_FACTORY.
	(scintilla_factory): Marked the property description strings for
	translation.

	* scintilla-control/Makefile.am: Translate and install
	Bonobo_Control_Scintilla.oaf.in instead of installing
	scintilla.oafinfo.

	* idl/editor-buffer.idl: Put EditorBuffer int the GNOME::Development
	namespace and studlycapsify it.

	* gdl/Makefile.am (IDL_FLAGS): Fixed a typo (s/dil/idl/).
